--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -4,15 +4,16 @@ header {
     background-position: -60px -20px;
     background-repeat: no-repeat;
     height: 555px;
+    position: relative;
     @media screen and (min-width: 768px) {}
     background-position: center center;
     h3 {
         color: #fff;
         font-size: 1.85em; //1em = 14px
-        margin-top: 100px;
+        margin-top: 200px;
         @media screen and (min-width: 768px) {
             font-size: 2.857em;
-            margin-top: 22%;
+            margin-top: 28%;
         }
     }
     .container {
@@ -39,11 +40,14 @@ header {
     top: 0;
     z-index: 20;
     height: 100px;
+    @media screen and (min-width: 769px) {
+        padding: 15px 50px;
+    }
 }
 
 .main-menu {
     height: 0%;
-    width: 72%;
+    width: 82%;
     position: fixed;
     z-index: 110;
     background-color: $color-main;
